--- a/Frontend/src/Styles/hero.css
+++ b/Frontend/src/Styles/hero.css
@@ -9,6 +9,7 @@
   justify-content: center;
   color: black;
   text-align: center;
+
 }
 
 .hero-content{
@@ -41,9 +42,7 @@
 }
 
 
-
-
-
+/* search */
 .hero-search {
   display: flex;
   justify-content: center;
@@ -53,7 +52,7 @@
 }
 
 .hero-search input {
-  padding: 0.8rem 1rem;
+  padding: 1rem 1rem;
   width: 300px;
   border-radius: 25px;
   border: 2px solid #ffffff;
@@ -73,7 +72,7 @@
 }
 
 .hero-search button {
-  padding: 0.8rem 1rem;
+  padding: 1rem 1rem;
   width: 100px;
   border: none;
   border-radius: 25px;
@@ -96,11 +95,11 @@
 }
 
 
-
+/* contact */
 .contact-btn {
-  position: absolute; /* floating over hero section */
-  left: 2.5rem;         /* adjust horizontal position */
-  bottom: 3rem;       /* adjust vertical position */
+  position: absolute; 
+  left: 2.5rem;      
+  bottom: 3rem;      
   width: 100px;
   height: 100px;
   border: 2px solid white;
